# Progression

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  appveyor.yml  clang-format-all.sh  mychanges.sh
assets/: assetList.json  chalet.mtl
assets/fastfiles/: basic.json  chalet.json  chalet.paf  gfx_required.json  gfx_required.paf  learnopengl_pbr_lighting.json  sponza.json  sponza.paf
assets/fonts/: fonts.paf
assets/images/: images.paf
assets/materials/: basic_colors.paf  basic_colors.pgMtl  cockatoo.pgMtl  wood.paf
assets/required_assets/: defaults.paf  gfx_required.csv  gfx_required.paf  startup.paf  ui_required.paf
assets/scenes/: basic.json  cornell.json  furnace_test.json  furnace_test_grid.csv  furnace_test_grid.json  furnace_test_single.json  learnopengl_pbr_lighting.json  main_menu.csv  main_menu.json  mkdd.csv  my_changes.csv  mychanges.csv  pbr.json  shadow_test.csv  shadow_test.json  singleMeshViewer.json  sponza.json  sponza_intel.json  startup.json
assets/scripts/: cameraController.lua  furnace_test.lua  furnace_test_grid.lua  furnace_test_single.lua  learnopengl_pbr_lighting.lua  scripts.paf  shadow_test.lua  startup_script.lua  test.lua
assets/shaders/: background_skybox.frag  basic.vert  common.glsl  compute_debug.comp  cull_meshlets.comp  depth.vert  frustum_cull_meshes.comp  full_screen_quad.vert  gbuffer.frag  global_descriptors.glsl  gradient.comp  lit.frag  lit.vert  model.mesh  model.task  model.vert  ms.mesh  post_process.comp  post_process.frag  post_process.vert  prefix_sum.comp  setup_1D_indirect_dispatch.comp  setup_culling_indirect_args.comp  shadow_frustums_cull.comp  sky.frag  sky.vert  skybox.frag  skybox.vert  ui.frag  ui.vert  unlit.frag
assets/sponza/: assetList.json  sponza.pgMtl
assets/ui/: main_menu.lua  main_menu.paf  startup.lua  startup.xml  ui.paf
cmake/: example_CMakeLists.txt  helpful_functions.cmake  platform_defines.hpp.in  set_compile_options_default.cmake  set_postfix.cmake  source_files.cmake
code/asset/: asset_cache.cpp  asset_cache.hpp  asset_file_database.cpp  asset_file_database.hpp  asset_manager.cpp  asset_manager.hpp  asset_versions.hpp  image.cpp  pmodel.cpp  pmodel.hpp  shader_preprocessor.cpp  shader_preprocessor.hpp
code/core/: bounding_box.cpp  bounding_box.hpp  camera.cpp  camera.hpp  console_commands.cpp  console_commands.hpp  cpu_profiling.hpp  dvars.cpp  dvars.hpp  engine_globals.cpp  engine_globals.hpp  feature_defines.hpp  frustum.cpp  frustum.hpp  image_processing.cpp  image_processing.hpp  image_types.hpp  init.cpp  init.hpp  input.cpp  input.hpp  input_types.cpp  input_types.hpp  lights.cpp  lights.hpp  low_discrepancy_sampling.cpp  low_discrepancy_sampling.hpp  lua.cpp  lua.hpp  pixel_formats.cpp  pixel_formats.hpp  raw_input_types.cpp  raw_input_types.hpp  scene.cpp  scene.hpp  time.cpp  time.hpp  window.cpp  (+1 more)
code/projects/brdf_integrate/: CMakeLists.txt  brdf_integrate_main.cpp
code/projects/converter/: CMakeLists.txt  asset_cache.cpp  asset_cache.hpp  asset_file_database.cpp  converter_main.cpp  converters.cpp  converters.hpp
code/projects/converter/converters/: base_asset_converter.cpp  base_asset_converter.hpp  font_converter.cpp  font_converter.hpp  gfx_image_converter.cpp  gfx_image_converter.hpp  material_converter.cpp  material_converter.hpp  model_converter.cpp  model_converter.hpp  pipeline_converter.cpp  pipeline_converter.hpp  script_converter.cpp  script_converter.hpp  shader_converter.cpp  shader_converter.hpp  textureset_converter.cpp  textureset_converter.hpp  ui_layout_converter.cpp  ui_layout_converter.hpp
code/projects/engine/: CMakeLists.txt  engine_init.cpp  engine_main.cpp  remote_console_server.cpp  remote_console_server.hpp
code/projects/gfximage_viewer/: CMakeLists.txt  gfximage_viewer_main.cpp
code/projects/model_exporter/: CMakeLists.txt  model_exporter_common.cpp  model_exporter_common.hpp  model_exporter_main.cpp  model_exporter_materials.cpp  model_exporter_materials.hpp
code/projects/offline_renderer/: CMakeLists.txt  anti_aliasing.cpp  anti_aliasing.hpp  bvh.cpp  bvh.hpp  intersection_tests.cpp  intersection_tests.hpp  lights.cpp  lights.hpp  offline_renderer_main.cpp  offline_scene.cpp  offline_scene.hpp  path_tracer.cpp  path_tracer.hpp  pt_lights.cpp  pt_lights.hpp  pt_math.hpp  pt_scene.cpp  pt_scene.hpp  sampling.cpp  sampling.hpp  shapes.cpp  shapes.hpp  tonemap.cpp  tonemap.hpp
code/projects/offline_renderer/asset/: pt_image.cpp  pt_image.hpp  pt_material.cpp  pt_material.hpp  pt_model.cpp  pt_model.hpp
code/projects/offline_renderer/resource/: material.cpp  material.hpp  model.cpp  model.hpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp
code/projects/remote_console/: CMakeLists.txt  remote_console_main.cpp
code/projects/sandbox/: CMakeLists.txt  sandbox_main.cpp
converter/: CMakeLists.txt  asset_cache.cpp  asset_cache.hpp  asset_file_database.cpp  asset_file_database.hpp  converter.cpp  converter.hpp  converter_main.cpp  generate_missing_pipelines.cpp  generate_missing_pipelines.hpp  main.cpp
converter/converters/: base_asset_converter.cpp  base_asset_converter.hpp  environment_map_converter.cpp  environment_map_converter.hpp  gfx_image_converter.cpp  gfx_image_converter.hpp  material_converter.cpp  material_converter.hpp  model_converter.cpp  model_converter.hpp  script_converter.cpp  script_converter.hpp  shader_converter.cpp  shader_converter.hpp
engine/: CMakeLists.txt  engine_main.cpp  main.cpp
src/: asset_manager.cpp  asset_manager.hpp  asset_versions.hpp  base_asset.hpp  engine_init.cpp  engine_init.hpp  gfx_image.cpp  gfx_image.hpp  image.cpp  image.hpp  main.cpp  material.hpp  pixel_formats.cpp  pixel_formats.hpp  remote_console_server.cpp  remote_console_server.hpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  resource_versions.hpp
tools/: CMakeLists.txt
tools/ModelExporter/: CMakeLists.txt  main.cpp  model_exporter_main.cpp
tools/ModelToPGModel/: CMakeLists.txt  main.cpp
(+1280 files in other folders)
